--- a/.github/workflows/check-urls.yml
+++ b/.github/workflows/check-urls.yml
@@ -9,12 +9,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - uses: actions/checkout@v3
+# NOTE: tj-actions/changed-files.
+# For push events you need to include fetch-depth: 0 | 2 depending on your use case.
+#  0: retrieve all history for all branches and tags
+#  1: retrieve current commit (by default)
+#  2: retrieve the preceding commit
+      - name: Determine workflow parameters
+        id: init-params
+        run: |
+          echo "::set-output name=fetch_depth::0";
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            echo "::set-output name=fetch_depth::1";
+          fi
 
-      - uses: trilom/file-changes-action@v1.2.4
-        id: file_changes
+      - uses: actions/checkout@v3
         with:
-          output: ''
+          fetch-depth: ${{ steps.init-params.outputs.fetch_depth }}
+
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v29.0.1
 
       - uses: ruby/setup-ruby@v1
         with:
@@ -23,12 +37,13 @@ jobs:
       - run: |
           gem install awesome_bot
 
-      - run: |
-          for i in ${{ steps.file_changes.outputs.files_modified }}; do
+      - name: Check each changed file
+        run: |
+          for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             echo;
-            echo "::group::Processing file... $i"
-            awesome_bot $i --allow-redirect --allow-dupe --allow-ssl || true;
-            echo "::endgroup::"
+            echo "::group::Processing file... $file";
+            awesome_bot "$file" --allow-redirect --allow-dupe --allow-ssl || true;
+            echo "::endgroup::";
           done
 
       - uses: actions/upload-artifact@v3
