--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -33,15 +33,13 @@ jobs:
           stale-issue-label: "stale"
           close-issue-label: "stale: closed"
           stale-issue-message: |
-            This issue has been automatically marked as stale because it has not had activity
-            during the past 60 days.
+            This issue has been automatically marked as stale because it has not had activity during the last 60 days.
 
             It will be closed if no further activity occurs on the next 30 days.
 
             Thank you for your contributions.
           close-issue-message: |
-            This issue has been automatically closed because it has been inactive during the last 30 days
-            since being marked as stale.
+            This issue has been automatically closed because it has been inactive during the last 30 days since being marked as stale.
 
             Anyway, thank you for your contributions.
           remove-issue-stale-when-updated: true
@@ -67,15 +65,13 @@ jobs:
           stale-pr-label: "stale"
           close-pr-label: "stale: closed"
           stale-pr-message: |
-            This pull request has been automatically marked as stale because it has not had activity
-            during the past 60 days.
+            This pull request has been automatically marked as stale because it has not had activity during the last 60 days.
 
             It will be closed if no further activity occurs on the next 30 days.
 
             Thank you for your contributions.
           close-pr-message: |
-            This pull request has been automatically closed because it has been inactive during the last 30 days
-            since being marked as stale.
+            This pull request has been automatically closed because it has been inactive during the last 30 days since being marked as stale.
 
             Anyway, thank you for your contributions.
           remove-pr-stale-when-updated: true
